@@ -5,11 +5,11 @@
 #       these distributed to a number of resources in an even way as possible.
 #       Not optimized.
 #       
-#  Copyright (c) 2007
+#  Copyright (c) 2007  Mats Bengtsson
 #  
 #  This file is distributed under BSD style license.
 #  
-#  $Id: mstack.tcl,v 1.2 2007-09-29 14:10:12 matben Exp $
+#  $Id: mstack.tcl,v 1.3 2007-09-30 08:00:55 matben Exp $
 
 package provide mstack 1.0
 
@@ -39,6 +39,10 @@ proc mstack::add {token key} {
     set idx [lsearch $lengths $min]
     lappend state($idx) $key
     return $idx
+}
+
+proc mstack::exists {token key} {
+    return [expr {[get $token $key] == -1 ? 0 : 1}]
 }
 
 proc mstack::get {token key} {
@@ -88,6 +92,7 @@ proc mstack::free {token} {
     unset -nocomplain $token
 }
 
+# Test:
 if {0} {
     set tok [mstack::init 5]
     mstack::add $tok a
@@ -106,6 +111,8 @@ if {0} {
     mstack::remove $tok d
     mstack::remove $tok g
     mstack::remove $tok y
+    mstack::exists $tok a
+    mstack::exists $tok X
     parray $tok
     mstack::add $tok A
     mstack::add $tok B
