@@ -36,5 +36,6 @@ package ifneeded jlib::pep         0.3 [list source [file join $dir pep.tcl]]
 package ifneeded jlib::pubsub      0.2 [list source [file join $dir pubsub.tcl]]
 package ifneeded jlib::roster      1.0 [list source [file join $dir roster.tcl]]
 package ifneeded jlib::si          0.1 [list source [file join $dir si.tcl]]
+package ifneeded jlib::sipub       0.1 [list source [file join $dir sipub.tcl]]
 package ifneeded jlib::util        0.1 [list source [file join $dir util.tcl]]
 package ifneeded jlib::vcard       0.1 [list source [file join $dir vcard.tcl]]
