@@ -8,6 +8,7 @@ Not to mention all bugfixes and rewrites.
 Coccinella-0.96.4 (2007????)
 
  o enabled stream image file transfer in whiteboard SVG mode
+ o colored nicknames with user selected color schemes
 
 
 Coccinella-0.96.2 (20070919)
